# campus-prep

./: .commands  .dockerignore  .env  .env.example  .gitignore  Dockerfile  PDF_INDEX.md  db.sqlite3  debug_subjects.py  docker-compose.yml  large_paths.txt  main.py  package-lock.json  package.json  pyproject.toml  rgpv_papers.db  robots.txt  seed_pass.py  sitemap.xml  skills-lock.json
.me/: llm.py  plan.md  project_state.md  test_ai_parser.py  todo
.me/datamine/: download_samples.py  fetch_department.py  fetch_e_group.py  main.py  output.html  pyproject.toml  rgpv_syllabus_data.json  scan_process.py  scrape_syllabus.py
.me/datamine/core/: enhancement.py  pdf_utils.py  pipeline.py
.me/extractior/: example_schema.py  how_to_use_llm.py  pyproject.toml  res.json
.me/extractior/src/: extractor.py  main.py
apps/academics/: admin.py  data_services.py  models.py  views.py
apps/common/: apps.py  services.py  turnstile.py
apps/content/: admin.py  api.py  data_services.py  models.py  seo_constants.py  services.py  tasks.py  urls.py  views.py
apps/gamification/: admin.py  apps.py  data_services.py  models.py  urls.py  views.py  views_dashboard.py
apps/notifications/: admin.py  data_services.py  models.py  services.py  urls.py  views.py
apps/practice/: admin.py  data_services.py  models.py  services.py  urls.py  views.py
apps/products/: admin.py  data_services.py  models.py  urls.py  views.py
apps/student_notes/: admin.py  apps.py  data_services.py  models.py  urls.py  views.py
apps/users/: adapters.py  admin.py  context_processors.py  data_services.py  forms.py  models.py  services.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
data/: branch_groups.json  db.sqlite3-shm  db.sqlite3-wal  dispatch_ai_parse_state.json  migrate_s3_to_local_files_state.json  reprocess_pdf_assets_state.json  rgpv_papers.db  subjects.json
data/backups/: db_backup.sql  rgpv_papers.db
data/snapshot/: pyq_papers.json  subjects.json
scripts/: cleanup_orphans.py  clear_s3.py  configure_cloudflare.py  download_rgpv_syllabus.py  entrypoint.sh  extract_all_syllabi.py  flush_valkey.py  gen_vapid.py  gen_vapid_v2.py  heal_images.py  import_papers.py  import_syllabi.py  link_existing_s3_pyqs.py  migrate_to_s3.py  recover_links.py  reformat_titles.py  reparse_all.py  reset_migrations.py  restore_from_sqlite.py  set_native_render.py  sync_db.py  sync_syllabi.py  test_image_recreation.py  test_s3.py  transform_syllabus.py  validate_katex.js
scripts/infra/: setup_cloudflare_waf.py
scripts/ops/: cleanup_s3_orphans.py  regenerate_images.py  reparse_documents.py  sync_database.py  sync_syllabus_units.py
scripts/testing/: benchmark.py  test_s3_storage.py
static/: sw.js
static/js/: admin-ai-parser.js  admin-document-preview.js  admin_parsed_document.js  analytics-charts.js  base-ui.js  checkout.js  clerk_auth.js  copy-base-note.js  note-editor-init.js  note-editor.js  practice-config.js  practice-result.js  push-notifications.js  quiz-engine.js  reader-content-renderer.js  reader-pdf-viewer.js  reader-search.js  reader-telemetry.js  reader-toolbar.js  subject-tabs.js
templates/: 400.html  403.html  404.html  500.html  admin_ai_parser.html  base.html  document_reader.html  home.html  login.html  signup.html  subject_dashboard.html
templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/admin/: parseddocument_change_form.html
templates/content/: admin_ai_parser.html  document_reader.html  document_reader_fullscreen.html  explore_subjects.html  home.html  seo_branch.html  seo_branches_index.html  seo_hub.html  seo_resource.html  seo_semester.html  seo_semesters_index.html  seo_subject.html  seo_subject_index.html  subject_dashboard.html
(+606 files in other folders)
