[project]
name = "rgpv-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.54",
    "celery>=5.6.2",
    "clerk-backend-api>=5.0.2",
    "django>=5.2.11",
    "django-storages>=1.14.6",
    "django-webpush>=0.3.6",
    "djangorestframework>=3.16.1",
    "google-genai>=1.64.0",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-core>=1.2.14",
    "langchain-openai>=1.1.10",
    "pdflatex>=0.1.3",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "razorpay>=2.0.0",
    "redis>=7.2.0",
]
