[project]
name = "rgpv-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.54",
    "celery>=5.6.2",
    "chardet<6.0.0",
    "clerk-backend-api>=5.0.2",
    "django>=5.2.11",
    "django-allauth>=65.14.3",
    "django-axes>=8.3.1",
    "django-jazzmin>=3.0.3",
    "django-ratelimit>=4.1.0",
    "django-silk>=5.4.3",
    "django-storages>=1.14.6",
    "django-webpush>=0.3.6",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "orjson>=3.11.7",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pymupdf4llm>=0.3.4",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "razorpay>=2.0.0",
    "redis>=7.2.0",
    "urllib3<2.3.0",
    "whitenoise>=6.11.0",
]

[tool.uv.workspace]
members = [
    ".me/datamine",
    ".me/naughty-notes",
    ".me/extractior",
]
